--- a/lab-03.Rmd
+++ b/lab-03.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 03 - Take a sad plot and make it better"
-author: "Daisy, Theo, Andrew Wright, May Nishimura, Xi Chen- Team Name"
+author: "User1, User2, User3, User4, User5 and User6 - Team Name"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -21,7 +21,7 @@ library(ggplot2)
 knitr::include_graphics("img/Speaking-the-world.jpg")
 ```
 
-_Write your comments about image 1 below_
+_china has misleading notation and should be using millions to be inline with the rest of the data. there is also an inconsistent scale to the bars._
 
 
 
@@ -33,7 +33,7 @@ _Write your comments about image 1 below_
 knitr::include_graphics("img/rose-pop-density-total-area-bw.jpg")
 ```
 
-_Write your comments about image 2 below_
+_no infomation about how to read the graph and no figures. probably not the best graph choice for the data._
 
 
 
@@ -44,7 +44,7 @@ _Write your comments about image 2 below_
 knitr::include_graphics("img/life-expectancy-rule-of-law.png")
 ```
 
-_Write your comments about image 3 below_
+_points overlapping making it hard to read. what is the rule of law axis?_
 
 
 
@@ -55,7 +55,7 @@ _Write your comments about image 3 below_
 knitr::include_graphics("img/global-income-dist.PNG")
 ```
 
-_Write your comments about image 4 below_
+_confusing axis._
 
 
 
